// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LayoutWindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Resize Navigation"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="32"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg rmd-layout-splitter rmd-layout-splitter--responsive"
  id="splitter-_r_0_"
  role="separator"
  type="button"
/>
`;

exports[`LayoutWindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Resize Navigation"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="32"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg rmd-layout-splitter rmd-layout-splitter--responsive custom-class-name"
  id="splitter-_r_0_"
  role="separator"
  style="color: white;"
  type="button"
/>
`;

exports[`LayoutWindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 3`] = `
<button
  aria-controls="does-not-exist"
  aria-labelledby="another-id"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="32"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg rmd-layout-splitter rmd-layout-splitter--responsive"
  id="splitter-_r_0_"
  role="separator"
  style=""
  type="button"
/>
`;

exports[`LayoutWindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 4`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Custom Label"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="32"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg rmd-layout-splitter rmd-layout-splitter--responsive"
  id="splitter-_r_0_"
  role="separator"
  style=""
  type="button"
/>
`;
